Closed Bug 403852 Opened 18 years ago Closed 18 years ago

Unable to access nsIDOMFile using [] operator

Categories

(Core :: DOM: Core & HTML, defect, P4)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: BijuMailList, Assigned: dcamp)

References

Details

Attachments

(2 files)

see bug 371432 Unable to access nsIDOMFile by document.getElementById('f').fileList[0] as mentioned in bug 371432 Comment 62 or http://developer.mozilla.org/en/docs/nsIDOMFileList and accessing using [] operator is common practice like * arguments[] * document.links[] * selection.options[] PS: I can get document.getElementById('f').fileList.item(0)
Should probably fix this before release. There is some classinfo love there, not sure what's missing. It should be doable to write a mochitest for this actually, if you request UniversalXPConnect access you can set .value as you please. The tricky part would be finding what file-name to set :(
Assignee: nobody → dcamp
Flags: blocking1.9?
+'ing this and setting to P4 as there is a work around.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P4
Attachment #293217 - Flags: superreview?(jonas)
Attachment #293217 - Flags: review?(jonas)
Attached patch and a testSplinter Review
mochitest for the array syntax.
Attachment #293227 - Flags: superreview?(jonas)
Attachment #293227 - Flags: review?(jonas)
Comment on attachment 293217 [details] [diff] [review] use ARRAY_SCRIPTABLE_FLAGS Sweet
Attachment #293217 - Flags: superreview?(jonas)
Attachment #293217 - Flags: superreview+
Attachment #293217 - Flags: review?(jonas)
Attachment #293217 - Flags: review+
Comment on attachment 293227 [details] [diff] [review] and a test Technically, you don't need to do this from onload. You could just write the code inline and not bother with the SimpleTest.waitForExplicitFinish/finish fluff.
Attachment #293227 - Flags: superreview?(jonas)
Attachment #293227 - Flags: superreview+
Attachment #293227 - Flags: review?(jonas)
Attachment #293227 - Flags: review+
Checking in content/base/test/Makefile.in; /cvsroot/mozilla/content/base/test/Makefile.in,v <-- Makefile.in new revision: 1.37; previous revision: 1.36 done RCS file: /cvsroot/mozilla/content/base/test/test_bug403852.html,v done Checking in content/base/test/test_bug403852.html; /cvsroot/mozilla/content/base/test/test_bug403852.html,v <-- test_bug403852.html initial revision: 1.1 done Checking in dom/src/base/nsDOMClassInfo.cpp; /cvsroot/mozilla/dom/src/base/nsDOMClassInfo.cpp,v <-- nsDOMClassInfo.cpp new revision: 1.500; previous revision: 1.499 done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
(In reply to comment #7) > (From update of attachment 293227 [details] [diff] [review]) > Technically, you don't need to do this from onload. You could just write the > code inline and not bother with the SimpleTest.waitForExplicitFinish/finish > fluff. I changed that.
Flags: in-testsuite+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: