Bug 403852: Unable to access nsIDOMFile using the [] operator.  r+sr=sicking, b=dsicore